# DA635E

./: .gitignore  README.md  pyproject.toml
tdd_lab/: .coveragerc
tdd_lab/rovarspraket/: rovar.py  test.py
tdd_lab/rovarspraket/rovar/: rovar.py
tdd_lab/tdd_clock/: test.py
tdd_lab/tdd_clock/clock/: clock.py
