[tool.poetry]
name = "tdd_lab"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
parameterized = "^0.8.1"
coverage = "^6.3.1"

[tool.poetry.dev-dependencies]
unittest = "^0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
